# k-means

./: .gitignore  CMakeLists.txt  index.html  mnms.data  prism.js
resources/: better.py  first_3d.py  k-means.gnuplot  open_a_pic_and_plot_points.py
src/: add_colors.py  averageImages.hpp  basic_scatter.py  better.py  copyImage.hpp  first_3d.py  gnu_plot_data_from_file.py  k_means.1.py  k_means.10.py  k_means.11.py  k_means.12.py  k_means.13.py  k_means.14.py  k_means.2.py  k_means.3.py  k_means.4.py  k_means.5.py  k_means.6.py  k_means.7.py  k_means.8.py  k_means.9.py  k_means.py  kmeans.cpp  kmeans.hpp  readImage.hpp  readRunWrite.hpp  render_lag.py  render_offline.py
src/python/: 4-3d_with_motion.py  5-3d_motion_from_picture.py  6-plot_with_vispy.py
test/: CMakeLists.txt  copyImageTest.cpp  directoryIteratorTest.cpp  everythingTest.cpp  imageTest.cpp  kmeansTest.cpp  readImageTest.cpp  readRunWriteTest.cpp  visualize.py
themes/: prism.css
